--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+cmd/kube-apiserver/kube-apiserver
+cmd/kube-controller-manager/kube-controller-manager
+cmd/kube-proxy/kube-proxy
+cmd/kube-scheduler/kube-scheduler
+cmd/kubectl/kubectl
+cmd/kubelet/kubelet
+
 # OSX leaves these everywhere on SMB shares
 ._*
 
