--- a/cmd/kubectl/dashboard/dashboard.yaml
+++ b/cmd/kubectl/dashboard/dashboard.yaml
@@ -39,8 +39,8 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: 443
-      targetPort: 8443
+#    - port: 443
+#      targetPort: 8443
     - port: 9090
       targetPort: 9090
       nodePort: 29999
