--- a/cmd/kubectl/recommended.yaml
+++ b/cmd/kubectl/recommended.yaml
@@ -37,9 +37,16 @@ metadata:
   name: kubernetes-dashboard
   namespace: kubernetes-dashboard
 spec:
+  type: NodePort
   ports:
     - port: 443
       targetPort: 8443
+      name: https
+      nodePort: 29998
+    - port: 9090
+      name: http
+      targetPort: 9090
+      nodePort: 29999
   selector:
     k8s-app: kubernetes-dashboard
 
@@ -192,6 +199,8 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8443
+              protocol: TCP
+            - containerPort: 9090
               protocol: TCP
           args:
             - --auto-generate-certificates
